# Ascend

./: .env.example  .flake8  .gitignore  DEPLOYMENT.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  create_analytics_tables.py  docker-compose.yml  init_db.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  run.sh  run_migrations.py  test_accuracy_integration.py  test_analytics.py  test_analytics_dashboard.py  test_analytics_endpoints.py  test_analytics_functions.py  test_analytics_models.py  test_analytics_simple.py  test_direct.py  test_task_completion.py
.github/workflows/: backend.yml  ci.yml  frontend.yml  secrets-scan.yml
app/: analytics.py  auth.py  db.py  debug_db.py  main.py  models.py  predictions.py  queries.py
ascend-frontend/: package-lock.json  package.json  postcss.config.cjs
ascend-frontend/src/: App.jsx  api.js  dashboard.jsx  index.css  main.jsx
ascend-frontend/src/components/Analytics/: AnalyticsDashboard.jsx
migrations/: 001_add_analytics_tables.py
scripts/: check_db.py  create_analytics_tables.py
tests/: test_ci_smoke.py
tests/analytics/: test_analytics_dashboard.py  test_performance.py  test_prediction_accuracy.py  test_prediction_accuracy_simple.py  test_predictions.py
tests/api/: test_auth.py  test_direct.py  test_foods.py
tests/legacy/: test_accuracy_integration.py  test_task_7_completion.py  test_task_8_completion.py
